--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@
 ############################
 
 # Name of website
-title: 70PT
+title: "70PT"
 
 # Your name to show in the footer
-author: Ahmed Suliman
+author: "Ahmed Suliman"
 
 ###############################################
 # --- List of links in the navigation bar --- #
