--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: "70PT"
+title: "SEVENTYPT"
 
 # Your name to show in the footer
 author: "Ahmed Suliman"
