--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 title: Seventy PT
 
 # Your name to show in the footer
-author: Some Person
+author: Ahmed Suliman
 
 ###############################################
 # --- List of links in the navigation bar --- #
